--- a/app/src/main/res/drawable/edittextstyle.xml
+++ b/app/src/main/res/drawable/edittextstyle.xml
@@ -5,9 +5,9 @@
     android:thickness="1dp">
     <stroke
         android:width="1dp"
-        android:color="#757575" />
+        android:color="#000000" />
     <corners android:radius="5dp" />
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#ffffff" />
 
 
 </shape>
