--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,5 +45,11 @@
         android:layout_height="wrap_content"
         android:text="Login" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="additem"
+        android:text="Add Item" />
+
 
 </LinearLayout>
