--- a/app/src/main/res/layout/add_item_list.xml
+++ b/app/src/main/res/layout/add_item_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:weightSum="1">
 
 
@@ -11,17 +11,29 @@
         android:id="@+id/textItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:text="ITEM :"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textColor="@color/primarytextBlack" />
 
 
-    <EditText
-        android:id="@+id/editItem"
-        android:layout_width="wrap_content"
+    <MultiAutoCompleteTextView
+        android:id="@+id/autocompletetextItem"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        android:background="@drawable/edittextstyle"
         android:hint="ITEM"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:padding="5dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textCursorDrawable="@drawable/cursor_color" />
 
 
 </LinearLayout>
