--- a/app/src/main/res/layout/content_menu_home.xml
+++ b/app/src/main/res/layout/content_menu_home.xml
@@ -12,5 +12,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/menu_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:listitem="@layout/menu_list"/>
 </LinearLayout>
