--- a/app/src/main/res/layout/menu_list.xml
+++ b/app/src/main/res/layout/menu_list.xml
@@ -11,12 +11,7 @@
         android:id="@+id/menu_list_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_margin="5dp"
         android:clickable="true"
         android:stateListAnimator="@anim/card_raise"
         card_view:cardCornerRadius="10dp"
@@ -38,7 +33,7 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="#e60000"
                 android:orientation="vertical">
 
@@ -55,6 +50,7 @@
                     android:layout_height="wrap_content"
                     android:text="Ingredients"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
+
 
             </LinearLayout>
 
