--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
 
     <color name="colorPrimaryRed">#F44336</color>
     <color name="colorPrimaryDarkRed">#D32F2F</color>
-    <color name="colorRedAccent">#3F51B5</color>
+    <color name="colorRedAccent">#FFFFFF</color>
+
+    <color name="primarytextBlack">#000000</color>
+
 
 </resources>
