--- a/app/src/main/res/layout/content_add_item.xml
+++ b/app/src/main/res/layout/content_add_item.xml
@@ -155,6 +155,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:layout_marginTop="25dp"
+        android:backgroundTint="?attr/colorPrimary"
         android:onClick="Additem"
         android:text="Add ITEM" />
 
