--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,5 +58,11 @@
         android:onClick="additem"
         android:text="Add Item" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="welcome"
+        android:text="WELCOME" />
+
 
 </LinearLayout>
