--- a/app/src/main/res/layout/menu_list.xml
+++ b/app/src/main/res/layout/menu_list.xml
@@ -73,7 +73,7 @@
                         android:text="-" />
 
                     <TextView
-                        android:id="@+id/textQuantity"
+                        android:id="@+id/textItemQuantity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
