--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.seindev.sehalsein.restaurantmanagement.MenuHome">
+    tools:context=".ShoppingCartHome">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -19,9 +19,9 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_menu_home" />
+    <include layout="@layout/content_shopping_cart" />
+
 
 </android.support.design.widget.CoordinatorLayout>
