--- a/app/src/main/res/layout/content_add_item.xml
+++ b/app/src/main/res/layout/content_add_item.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.seindev.sehalsein.restaurantmanagement.AddItem"
+    tools:context=".AddItemHome"
     tools:showIn="@layout/activity_add_item">
 
     <LinearLayout
