--- a/app/src/main/res/layout/activity_review_home.xml
+++ b/app/src/main/res/layout/activity_review_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ItemDetail">
+    tools:context="com.seindev.sehalsein.restaurantmanagement.ReviewHome">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_item_detail" />
-
+    <include layout="@layout/content_review_home" />
 
 </android.support.design.widget.CoordinatorLayout>
