--- a/app/src/main/res/layout/content_item_detail.xml
+++ b/app/src/main/res/layout/content_item_detail.xml
@@ -48,6 +48,7 @@
                     android:text="Spicy Level" />
 
                 <TextView
+                    android:id="@+id/textSpicyLevel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -78,6 +79,7 @@
                 android:paddingTop="20dp">
 
                 <TextView
+                    android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -86,13 +88,15 @@
                     android:layout_gravity="center_vertical"
                     android:text="RATINGS" />
 
-                <TextView
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    style="?android:attr/ratingBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:text="RATING" />
+                    android:isIndicator="true" />
 
             </RelativeLayout>
 
@@ -107,25 +111,52 @@
             android:stateListAnimator="@anim/card_raise"
             card_view:cardElevation="@dimen/card_idle">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#55000000"
-                android:paddingBottom="20dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="20dp">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#55000000"
+                    android:orientation="vertical"
+                    android:paddingBottom="20dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="20dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_vertical"
+                        android:text="Description" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center_vertical"
-                    android:text="Description" />
+                    android:paddingBottom="20dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="20dp">
 
-            </RelativeLayout>
+                    <TextView
+                        android:id="@+id/textDescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_vertical"
+                        android:text="Description" />
+                </LinearLayout>
+
+            </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
@@ -162,11 +193,13 @@
                         android:text="REVIEW" />
 
                     <TextView
+                        android:id="@+id/textmore"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
+                        android:onClick="morereview"
                         android:text="More" />
 
                 </RelativeLayout>
@@ -174,13 +207,12 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#fb0044ff"
                     android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#ff8899"
+
                         android:orientation="horizontal"
                         android:padding="10dp">
 
@@ -190,7 +222,7 @@
                             android:background="#00ff99" />
 
                         <TextView
-                            android:id="@+id/textView"
+                            android:id="@+id/customername"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
@@ -202,42 +234,56 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#ff9944"
+
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/timestamp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_margin="5dp"
                             android:text="TIME STAMP" />
 
                         <TextView
                             android:id="@+id/textRated"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentTop="true"
-                            android:layout_marginRight="10dp"
-                            android:layout_toLeftOf="@+id/textRating"
-                            android:layout_toStartOf="@+id/textRating"
+                            android:layout_centerVertical="true"
+                            android:layout_toLeftOf="@+id/textIndRating"
+                            android:layout_toStartOf="@+id/textIndRating"
                             android:text="RATED" />
 
+
                         <TextView
-                            android:id="@+id/textRating"
+                            android:id="@+id/textIndRating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentRight="true"
                             android:layout_alignParentTop="true"
-                            android:text="RATINGS" />
+                            android:layout_centerVertical="true"
+                            android:layout_margin="5dp"
+                            android:background="#FFFF00"
+                            android:paddingBottom="2dp"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:paddingTop="2dp"
+                            android:text="0.0" />
+
 
                     </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:background="#fb0044ff">
 
                         <TextView
+                            android:id="@+id/textReview"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_margin="10dp"
                             android:text="REVIEWS" />
                     </LinearLayout>
 
