--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,6 +117,12 @@
                 android:onClick="addreview"
                 android:text="Add Review" />
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:onClick="addcustomer"
+                android:text="Add Customer" />
+
         </LinearLayout>
 
     </LinearLayout>
