--- a/app/src/main/res/layout/content_item_detail.xml
+++ b/app/src/main/res/layout/content_item_detail.xml
@@ -204,90 +204,120 @@
 
                 </RelativeLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
                     <LinearLayout
+                        android:id="@+id/layoutReview"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-
-                        <ImageView
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:background="#00ff99" />
-
-                        <TextView
-                            android:id="@+id/customername"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:text="Customer Name"
-                            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                            android:orientation="horizontal"
+                            android:padding="10dp">
+
+                            <ImageView
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:background="#00ff99" />
+
+                            <TextView
+                                android:id="@+id/customername"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:text="Customer Name"
+                                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                        </LinearLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/timestamp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_margin="5dp"
+                                android:text="TIME STAMP"
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                            <TextView
+                                android:id="@+id/textRated"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_toLeftOf="@+id/textIndRating"
+                                android:layout_toStartOf="@+id/textIndRating"
+                                android:text="RATED" />
+
+
+                            <TextView
+                                android:id="@+id/textIndRating"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignParentTop="true"
+                                android:layout_centerVertical="true"
+                                android:layout_margin="5dp"
+                                android:background="#FFFF00"
+                                android:paddingBottom="2dp"
+                                android:paddingLeft="5dp"
+                                android:paddingRight="5dp"
+                                android:paddingTop="2dp"
+                                android:text="0.0" />
+
+
+                        </RelativeLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:id="@+id/textReview"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_margin="10dp"
+                                android:text="REVIEWS"
+                                android:textColor="@color/primarytextBlack" />
+                        </LinearLayout>
 
                     </LinearLayout>
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/timestamp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_margin="5dp"
-                            android:text="TIME STAMP" />
-
-                        <TextView
-                            android:id="@+id/textRated"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_toLeftOf="@+id/textIndRating"
-                            android:layout_toStartOf="@+id/textIndRating"
-                            android:text="RATED" />
-
-
-                        <TextView
-                            android:id="@+id/textIndRating"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_alignParentTop="true"
-                            android:layout_centerVertical="true"
-                            android:layout_margin="5dp"
-                            android:background="#FFFF00"
-                            android:paddingBottom="2dp"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="5dp"
-                            android:paddingTop="2dp"
-                            android:text="0.0" />
-
-
-                    </RelativeLayout>
-
                     <LinearLayout
+                        android:id="@+id/layoutNoReview"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#fb0044ff">
+                        android:layout_height="100dp"
+                        android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textReview"
+                            android:id="@+id/textView2"
+                            android:layout_width="wrap_content"
+
+                            android:layout_height="wrap_content"
+                            android:text="Small Text" />
+
+                        <TextView
+                            android:id="@+id/textNoReview"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_margin="10dp"
-                            android:text="REVIEWS" />
+                            android:text="NO REVIEWS" />
+
                     </LinearLayout>
 
-                </LinearLayout>
+                </RelativeLayout>
+
 
             </LinearLayout>
 
