--- a/app/src/main/res/layout/content_shopping_cart.xml
+++ b/app/src/main/res/layout/content_shopping_cart.xml
@@ -67,8 +67,8 @@
 
             </android.support.v7.widget.CardView>
 
-
         </LinearLayout>
+
     </RelativeLayout>
 
     <LinearLayout
@@ -90,6 +90,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:padding="5dp">
 
                 <RelativeLayout
@@ -112,9 +113,22 @@
                         android:textAppearance="?android:attr/textAppearanceLarge" />
                 </RelativeLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/buttonShopping"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:onClick="order"
+                        android:text="ORDER" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
+
     </LinearLayout>
 
 
