Customer Bug FIxes
-Major Bug Fixes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,6 +129,12 @@
                 android:onClick="kitchen"
                 android:text="Kitchen" />
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:onClick="cashier"
+                android:text="Cashier" />
+
         </LinearLayout>
 
     </LinearLayout>
