--- a/app/src/main/res/layout/menu_list.xml
+++ b/app/src/main/res/layout/menu_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,6 +18,7 @@
         card_view:cardElevation="@dimen/card_idle">
 
         <LinearLayout
+            android:id="@+id/menu_card"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#fb17e2ac"
@@ -63,12 +64,7 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/bttest"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test" />
 
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+</RelativeLayout>
